# oath2-practice

./: Dockerfile  compose.yaml  pyproject.toml
src/: app.py  create_token.py  creating_tables.py  database.py  helper_fun.py  model.py  oauth.py  setting.py
src/login/: signin.py  signout.py  signup.py
src/validation/: email_validation.py  phone_no_validation.py
tests/: __init__.py
